# lrasm

./: CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  pyproject.toml.bak
.github/workflows/: ci-cd.yml
docs/: example.ipynb  requirements.txt
src/LR_assumption_test/: Homoscedacity_test.py  normality_test.py
src/lrasm/: homoscedasticity.py  homoscedasticity_test.py  multicollinearity_test.py  normality_tst.py
tests/: test_homoscedasticity_test.py  test_multicollinearity_test.py  test_normality_test.py
