[tool.poetry]
name = "lrasm"
version = "0.1.0"
description = "A package containing functions to test linearity assumptions for linear regression performed on single or multiple linear regression for a specified dataset"
authors = ["Yair Guterman, Hatef Rahmani, Song Bo Andy Yang "]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
matplotlib = "^3.5.1"
numpy = "^1.22.1"
pandas = "^1.3.5"
scipy = "^1.7.3"
sklearn = "^0.0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
